<resources>
    <string name="app_name">PaintCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="enter_dimensions">Enter the dimensions of the room in feet.</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="gallons">Gallons</string>
    
    <string name="enter_door_window">How many doors and windows?</string>
    <string name="doors">Doors</string>
    <string name="windows">Windows</string>
    <string name="compute_btn">Compute Gallons</string>
    <string name="help_btn">Help</string>
    <string name="title">Interior Paint Job Calculator</string>
    
    <!-- Help text -->
    <string name="help_text">
        This paint job calculator computes the approximate number of gallons need to paint a single coat covering four walls and the ceiling of an interior room.
        \n\n
        If you wish to apply multiple coats, multiply the number of computed gallons by the number of coats needed.You must provide the dimensions of the room as well as the number of doors and windows.
        \n\n
        The input for the dimensions of the room will be the length, width, and height of the room. In addition, you must also provide the number of doors and windows in the room; their area will not be included in the surface area to be painted.
        \n\n
        This calculator assumes a door is a standard measurement of 7 * 3 and a window is a standard measurement of 4 * 4 feet.
        \n\n
        A gallon of paint will cover approximately 275 square feet.
    </string>
    
</resources>
