<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/paintbackground"
    tools:context=".MainActivity">
<!-- paint calculator title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<!-- sub title -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

<!--length -->

    <EditText
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/textView2"
        android:layout_alignBottom="@id/textView5"
        android:layout_marginRight="19dp"
        android:ems="5"
        android:inputType="number" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/lable_left_margin"
        android:layout_marginTop="25dp"
        android:layout_below="@id/textView2"
        android:text="@string/length"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <!-- width -->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="@dimen/lable_left_margin"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/width" />
    <EditText
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView4"
        android:layout_alignRight="@id/textView2"
        android:ems="5"
        android:layout_marginRight="19dp"
        android:inputType="number" />
    <!-- height -->
    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView4"
        android:layout_marginLeft="@dimen/lable_left_margin"
        android:layout_marginTop="25dp"
        android:text="@string/height"
        android:textAppearance="?android:attr/textAppearanceSmall"/>


    <EditText
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView14"
        android:layout_alignRight="@id/textView2"
        android:ems="5"
        android:layout_marginRight="19dp" />

<!-- sub title two -->

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/enter_door_window" />

    <!-- Number of doors -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_below="@id/textView12"
        android:layout_marginLeft="@dimen/lable_left_margin"
        android:layout_marginTop="25dp"
        android:text="@string/doors"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    <EditText
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView3"
        android:layout_alignRight="@id/textView2"
        android:ems="5"
        android:layout_marginRight="19dp"/>
    <!--number of windows -->
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginLeft="@dimen/lable_left_margin"
        android:layout_marginTop="25dp"
        android:text="@string/windows"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    <EditText
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView11"
        android:layout_alignRight="@id/textView2"
        android:ems="5"
        android:layout_marginRight="19dp" />

    <!--TODO Add on clicks to the buttons -->
<!-- Buttons -->
    <Button
        android:id="@+id/button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@id/textView11"
        android:layout_marginTop="17dp"
        android:text="@string/compute_btn" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignRight="@id/textView12"
        android:text="@string/help_btn" />

    <!-- bottom text -->
    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/gallons" />

</RelativeLayout>